Add postcards page

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-snap">
   <head>
     <meta charset="utf-8" />
     <title>The trash animal tango</title>
@@ -167,8 +167,8 @@
       <p>
         Made with love and AI by
         <a href="https://drtaco.net/">Margarita the Possum</a> and
-        <a href="https://sapegin.me/">Artem the Raccoon</a>. Someone’s trash is
-        someone’s treasure.
+        <a href="https://sapegin.me/">Artem the Raccoon</a>. One person’s trash
+        is another person’s treasure.
       </p>
     </footer>
   </body>
